--- a/trunk/project.properties
+++ b/trunk/project.properties
@@ -2,17 +2,14 @@ project.name=testdox-plugin
 project.title=TestDox
 project.homepage=http://testdox.codehaus.org
 project.description=Provides enhanced navigation and live documentation for unit tested code. Never write a badly named test again!
-project.version=1.1.6
+project.version=1.1.7
 
 
 project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.beanlab.org/browse/TDX-14">TDX-14</a> - The Toggle QuickDox and Toggle TestDox actions are incorrectly enabled.<br>\
-<br>\
-<b>Improvements:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.beanlab.org/browse/TDX-1">TDX-1</a> -  The escape key should close the Quickdox window.<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-1">TESTDOX-1</a> - Escape key no longer closes 'Go To' dialogs<br>\
 </body>\
 </html>]]>
 
