--- a/trunk/src/java/META-INF/plugin.xml
+++ b/trunk/src/java/META-INF/plugin.xml
@@ -14,14 +14,16 @@
             <implementation-class>org.codehaus.testdox.intellij.TestDoxProjectComponent</implementation-class>
             <option name="workspace" value="true"/>
             <layout>
-                <window_info id="TestDox Plugin" active="false" anchor="bottom" auto_hide="false" internal_type="docked" type="docked" visible="true" weight="0.33"/>
+                <window_info id="TestDox Plugin" active="false" anchor="bottom" auto_hide="false" internal_type="docked"
+                             type="docked" visible="true" weight="0.33"/>
             </layout>
         </component>
     </project-components>
 
     <application-components>
         <component>
-            <implementation-class>org.codehaus.testdox.intellij.inspections.TestDoxInspectionProvider</implementation-class>
+            <implementation-class>org.codehaus.testdox.intellij.inspections.TestDoxInspectionProvider
+            </implementation-class>
         </component>
     </application-components>
 
@@ -42,7 +44,7 @@
                 class="org.codehaus.testdox.intellij.actions.CloseQuickDoxAction"
                 text="Close QuickDox"
                 description="Closes the TestDox tooltip">
-            <keyboard-shortcut first-keystroke="ESCAPE" keymap="$default"/>
+            <keyboard-shortcut first-keystroke="alt ESCAPE" keymap="$default"/>
         </action>
         <action id="TestDox::Toggle Class/Test"
                 class="org.codehaus.testdox.intellij.actions.ToggleTestClassAction"
