--- a/trunk/project.properties
+++ b/trunk/project.properties
@@ -2,14 +2,14 @@ project.name=testdox-plugin
 project.title=TestDox
 project.homepage=http://testdox.codehaus.org
 project.description=Provides enhanced navigation and live documentation for unit tested code. Never write a badly named test again!
-project.version=1.1.7
+project.version=1.1.9
 
 
 project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-1">TESTDOX-1</a> - Escape key no longer closes 'Go To' dialogs<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-12">TESTDOX-12</a> - Added missing @State annotation required by IntelliJ IDEA 7.0<br>\
 </body>\
 </html>]]>
 
