--- a/trunk/project.properties
+++ b/trunk/project.properties
@@ -9,7 +9,7 @@ project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-12">TESTDOX-12</a> - Added missing @State annotation required by IntelliJ IDEA 7.0<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-12">TESTDOX-12</a> - Added missing @State annotation required since IntelliJ IDEA 7.0.2<br>\
 </body>\
 </html>]]>
 
