--- a/trunk/project.properties
+++ b/trunk/project.properties
@@ -2,14 +2,15 @@ project.name=testdox-plugin
 project.title=TestDox
 project.homepage=http://testdox.codehaus.org
 project.description=Provides enhanced navigation and live documentation for unit tested code. Never write a badly named test again!
-project.version=1.1.9
+project.version=1.1.10
 
 
 project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-12">TESTDOX-12</a> - Added missing @State annotation required since IntelliJ IDEA 7.0.2<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-17">TESTDOX-17</a> - Recompiled using JDK 1.5<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-18">TESTDOX-18</a> - Recompiled to run under IDEA 7.0.4<br>\
 </body>\
 </html>]]>
 
