--- a/project.properties
+++ b/project.properties
@@ -2,15 +2,14 @@ project.name=testdox-plugin
 project.title=TestDox
 project.homepage=http://testdox.codehaus.org
 project.description=Provides enhanced navigation and live documentation for unit tested code. Never write a badly named test again!
-project.version=1.1.10
+project.version=1.1.11
 
 
 project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-17">TESTDOX-17</a> - Recompiled using JDK 1.5<br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-18">TESTDOX-18</a> - Recompiled to run under IDEA 7.0.4<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-15">TESTDOX-15</a> - Added support for IDEA 8.0 (Diana)<br>\
 </body>\
 </html>]]>
 
