--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 #Thu Feb 18 07:18:33 GMT 2010
 project.organization=Franck Rasolo
 project.name=TestDox
-sbt.version=0.7.1
+sbt.version=0.7.4
 project.version=1.2.0
 def.scala.version=2.7.7
-build.scala.versions=2.8.0.Beta1
+build.scala.versions=2.8.0
 project.initialize=false
