--- a/src/java/META-INF/plugin.xml
+++ b/src/java/META-INF/plugin.xml
@@ -5,8 +5,7 @@
   <change-notes>@PROJECT.CHANGENOTES@</change-notes>
   <vendor email="@PROJECT.VENDOR.EMAIL@" url="@PROJECT.VENDOR.HOMEPAGE@">@PROJECT.VENDOR@</vendor>
   <idea-version since-build="@IDEA.SINCE-BUILD@" until-build="@IDEA.UNTIL-BUILD@"/>
-
-  <depends>com.intellij.idea</depends>
+  <depends/>
 
   <project-components>
     <component>
