A little clean up...

--- a/branches/pre-scala-migration/build.xml
+++ b/branches/pre-scala-migration/build.xml
@@ -125,8 +125,8 @@
       <fileset dir="${java.src}" excludes="**/*.java, ${binary.extensions}"/>
       <filterset>
         <filter token="IDEA.SINCE-BUILD" value="90.116"/>
-        <filter token="IDEA.UNTIL-BUILD" value="100.0"/>
-        <filter token="PROJECT.VERSION" value="${project.version} (maia)"/>
+        <filter token="IDEA.UNTIL-BUILD" value="99.9999"/>
+        <filter token="PROJECT.VERSION" value="${project.version} (Maia)"/>
       </filterset>
       <filterset refid="project.vars"/>
       <filterset refid="timestamp.vars"/>
