--- a/trunk/project.properties
+++ b/trunk/project.properties
@@ -2,17 +2,17 @@ project.name=testdox-plugin
 project.title=TestDox
 project.homepage=http://testdox.codehaus.org
 project.description=Provides enhanced navigation and live documentation for unit tested code. Never write a badly named test again!
-project.version=1.1.12
+project.version=1.2.0
 
 
 project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-20">TESTDOX-20</a> - Added support for IDEA 8.1 (Diana)<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-24">TESTDOX-24</a> - Added support for IDEA 9.0 (Maia)<br>\
 </body>\
 </html>]]>
 
-project.vendor=Ian Bourke, Franck Rasolo
+project.vendor=Franck Rasolo
 project.vendor.email=
 project.vendor.homepage=http://testdox.codehaus.org
