Improved the claimed support for Ant 1.7+

--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,8 @@
             <or>
                 <contains string="${ant.version}" substring="1.7"/>
                 <contains string="${ant.version}" substring="1.8"/>
+                <contains string="${ant.version}" substring="1.9"/>
+                <contains string="${ant.version}" substring="2.0"/>
             </or>
         </condition>
     </target>
