--- a/project.properties
+++ b/project.properties
@@ -9,7 +9,7 @@ project.change-notes=<![CDATA[\
 <html>\
 <body>\
 <b>Bugs Fixed:</b><br>\
-&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-24">TESTDOX-24</a> - Added support for IDEA 9.0 (Maia)<br>\
+&nbsp;-&nbsp;<a href="http://jira.codehaus.org/browse/TESTDOX-26">TESTDOX-26</a> - Made TestDox compatible with IDEA 10.0.2<br>\
 </body>\
 </html>]]>
 
