--- a/src/resources/META-INF/plugin.xml
+++ b/src/resources/META-INF/plugin.xml
@@ -4,7 +4,8 @@
     <version>@PROJECT.VERSION@</version>
     <change-notes>@PROJECT.CHANGENOTES@</change-notes>
     <vendor email="@PROJECT.VENDOR.EMAIL@" url="@PROJECT.VENDOR.HOMEPAGE@">@PROJECT.VENDOR@</vendor>
-    <idea-version since-build="@IDEA.SINCE-BUILD@" until-build="@IDEA.UNTIL-BUILD@"/>
+    <!--<idea-version since-build="@IDEA.SINCE-BUILD@" until-build="@IDEA.UNTIL-BUILD@"/>-->
+    <idea-version since-build="@IDEA.SINCE-BUILD@"/>
 
     <project-components>
         <component>
